--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -8,8 +8,9 @@ dataSources:
     name: ProofMarketplace
     network: arbitrum-sepolia
     source:
-      address: '0x22843e74c59580b3eaf6c233fa67d8b7c561a835'
+      address: '0xfa2AAcA897C4AB956625B72ac678b3CB5450a154'
       abi: ProofMarketplace
+      startBlock: 92909100
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -34,8 +35,9 @@ dataSources:
     name: SymbioticStaking
     network: arbitrum-sepolia
     source:
-      address: '0x22843e74c59580b3eaf6c233fa67d8b7c561a835'
+      address: '0xE7136641cB2c94d318779c3B6BEb997dC5B2E574'
       abi: SymbioticStaking
+      startBlock: 92909100
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -52,12 +54,15 @@ dataSources:
           handler: handleSnapshotConfirmed
         - event: VaultSnapshotSubmitted(indexed address,uint256,uint256,bytes,bytes)
           handler: handleVaultSnapshotSubmitted
+        - event: StakeLocked(indexed uint256,indexed address,indexed address,uint256)
+          handler: handleStakeLocked
   - kind: ethereum/contract
     name: GeneratorRegistry
     network: arbitrum-sepolia
     source:
-      address: '0x22843e74c59580b3eaf6c233fa67d8b7c561a835'
+      address: '0xdC33E074d2b055171e56887D79678136B4505Dec'
       abi: GeneratorRegistry
+      startBlock: 92909100
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
