--- a/subgraph-arbSep.yaml
+++ b/subgraph-arbSep.yaml
@@ -6,11 +6,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: ProofMarketplace
-    network: arbitrum-one
+    network: arbitrum-sepolia
     source:
-      address: '0xE68A7457c0fd11CcBe96126Bf69B27a9064636a2'
+      address: '0xC05d689B341d84900f0d0CE36f35aDAbfB57F68d'
       abi: ProofMarketplace
-      startBlock: 299180250
+      startBlock: 113435500
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -33,11 +33,11 @@ dataSources:
           handler: handleInitialized
   - kind: ethereum/contract
     name: SymbioticStaking
-    network: arbitrum-one
+    network: arbitrum-sepolia
     source:
-      address: '0x356CBC9971867b71b904D38C620320589B489FE3'
+      address: '0x078B3f1504a4B5Bc08EB057cd2Fc8DD790459163'
       abi: SymbioticStaking
-      startBlock: 299180250
+      startBlock: 113435500
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
@@ -58,11 +58,11 @@ dataSources:
           handler: handleStakeLocked
   - kind: ethereum/contract
     name: ProverManager
-    network: arbitrum-one
+    network: arbitrum-sepolia
     source:
-      address: '0xEcF45b1272D3B0ed2eB2A3c85b1E4bBa8a3611D6'
+      address: '0x4743a2c7a96C9FBED8b7eAD980aD01822F9711Db'
       abi: ProverManager
-      startBlock: 299180250
+      startBlock: 113435500
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
